# module01_software_engineering

./: README.md
01_introduction_python/: README.md
02_python/: README.md
03_c_plus_plus/: .gitignore  Makefile  README.md
03_c_plus_plus/lectures/: lectures_00_intro_compilation.md  lectures_01_types_flow_control.md  lectures_03_array_vector.md  (+1 more)
04_best_practices_construction/: README.md
05_best_practices_design/: README.md
06_software_projects/: README.md
08_code_management/: 00_Git_Basics.md  01_Branching.md  02_Remotes_and_GitHub.md  03_README_and_Markdown.md  04_Pull_Request_and_Forking.md  05_Issues.md  README.md
09_testing/: 00_TDD.md  01_Mocks.md  02_CI.md  03_Code_Coverge.md  05_Functional_Testing.md  README.md
10_agile_programming/: README.md
11_data_structures_algorithms/: README.md
12_c_plus_plus_and_python/: Makefile  README.md
12_optimisation_1/: Makefile
13_optimization_2/: Makefile  README.md
13_optimization_2/practicals/cell_model/: CMakeLists.txt  README.md  setup.py
13_optimization_2/practicals/cell_model/src/: Functions.cpp  Functions.hpp  Simulation.cpp  Simulation.hpp  python_wrapper.cpp
14_user_interface_design/: README.md
15_packaging_delivery/: 01_goals.md  02_considerations.md  02_considerations01.md  02_considerations02.md  02_considerations03.md  02_considerations04.md  03_ci_cd.md  03_docker.md  04_ci_cd.md  04_ci_cd_examples.md  04_ci_cd_examples01.md  04_ci_cd_examples02.md  04_ci_cd_examples03.md  04_ci_cd_examples04.md  05_tooling.md  06_projects.md  README.md  create_pdf.bat  create_slides.bat  metadata.yaml
(+61 files in other folders)
